--- a/guide-site/package.json
+++ b/guide-site/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
     "@ant-design/nextjs-registry": "^1.3.0",
-    "@supabase/supabase-js": "^2.95.3",
     "antd": "^6.3.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
+    "mysql2": "^3.17.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
